--- a/examples/lettier.html
+++ b/examples/lettier.html
@@ -132,21 +132,30 @@
 				}
 				{
 					let geo = new THREE.PlaneBufferGeometry(1, 1)
+					window.uniformsSSR = {
+						projectionMatrix: { value: new THREE.Matrix4() },
+						modelViewMatrix: { value: new THREE.Matrix4() },
+						normalTexture: { value: renderTarget.textures[2] },
+						positionTexture: { value: renderTarget.textures[3] },
+					}
 					window.materialSSR = new THREE.RawShaderMaterial({
-						uniforms: {
-							p3d_ModelViewMatrix,
-							p3d_ProjectionMatrix,
-							p3d_NormalMatrix,
-							normalTexture: { value: renderTarget.textures[2] },
-							positionTexture: { value: renderTarget.textures[3] },
-						},
-						vertexShader: vertexShader,
+						uniforms: uniformsSSR,
+						vertexShader: `#version 300 es
+							precision lowp sampler2DShadow;
+							uniform mat4 projectionMatrix;
+							uniform mat4 modelViewMatrix;
+							in vec3 position;
+							void main(){
+								gl_Position=projectionMatrix*modelViewMatrix*vec4(position,1);
+							}
+						`,
 						fragmentShader: fragmentShaderSSR,
 					})
 					// let materialSSR=new THREE.MeshBasicMaterial({
 					// 	color:'cyan',
 					// })
 					let mesh = new THREE.Mesh(geo, materialSSR)
+					window.meshSSR = mesh
 					scene2.add(mesh)
 					mesh.position.x = .5
 					mesh.position.y = -.5
@@ -300,6 +309,9 @@
 			// camera.updateMatrixWorld()
 			// camera.updateWorldMatrix()
 			// camera.updateProjectionMatrix()
+
+			uniformsSSR.projectionMatrix.value = camera2.projectionMatrix
+			uniformsSSR.modelViewMatrix.value = meshSSR.modelViewMatrix
 
 			meshs.forEach(child => {
 				let uniforms = child.material.uniforms
