--- a/examples/lettier.html
+++ b/examples/lettier.html
@@ -145,7 +145,10 @@
 							uniform mat4 projectionMatrix;
 							uniform mat4 modelViewMatrix;
 							in vec3 position;
+							in vec2 uv;
+							out vec2 texCoord;
 							void main(){
+								texCoord=uv;
 								gl_Position=projectionMatrix*modelViewMatrix*vec4(position,1);
 							}
 						`,
