--- a/examples/lettier.html
+++ b/examples/lettier.html
@@ -10,8 +10,11 @@
 
 <body>
 	<div id="dom_tip"
-		style="width:100%;height:100%;position:fixed;left:0;top:0;pointer-events: none;display:flex;align-items: center;justify-content: center;color:white;user-select: none;">
-		drag</div>
+		style="width:100%;height:100%;position:fixed;left:0;top:0;pointer-events: none;display:flex;align-items: center;justify-content: center;color:white;user-select: none;text-align: center;">
+		(please make the window square)<br>
+		<br>
+		drag to start<br>
+	</div>
 
 	<script>window.THREE = true</script>
 	<script src='/lib/vs_util/vs_util.js'></script>
@@ -132,9 +135,11 @@
 				}
 				{
 					let geo = new THREE.PlaneBufferGeometry(1, 1)
+					// let geo = new THREE.PlaneBufferGeometry(2, 2)
 					window.uniformsSSR = {
 						projectionMatrix: { value: new THREE.Matrix4() },
 						modelViewMatrix: { value: new THREE.Matrix4() },
+						lensProjection: { value: new THREE.Matrix4() },
 						normalTexture: { value: renderTarget.textures[2] },
 						positionTexture: { value: renderTarget.textures[3] },
 					}
@@ -162,6 +167,7 @@
 					scene2.add(mesh)
 					mesh.position.x = .5
 					mesh.position.y = -.5
+					// mesh.position.z = .1
 				}
 			}
 
@@ -315,6 +321,7 @@
 
 			uniformsSSR.projectionMatrix.value = camera2.projectionMatrix
 			uniformsSSR.modelViewMatrix.value = meshSSR.modelViewMatrix
+			uniformsSSR.lensProjection.value = camera.projectionMatrix
 
 			meshs.forEach(child => {
 				let uniforms = child.material.uniforms
