--- a/examples/lettier.html
+++ b/examples/lettier.html
@@ -140,6 +140,7 @@
 						projectionMatrix: { value: new THREE.Matrix4() },
 						modelViewMatrix: { value: new THREE.Matrix4() },
 						lensProjection: { value: new THREE.Matrix4() },
+						beautyTexture: { value: renderTarget.textures[0] },
 						normalTexture: { value: renderTarget.textures[2] },
 						positionTexture: { value: renderTarget.textures[3] },
 					}
