--- a/examples/lettier.html
+++ b/examples/lettier.html
@@ -81,7 +81,8 @@
 						addGeoAttributes(child.geometry)
 						child.material = createMtl({
 							map: origin_mtl.map,
-							isWater: child.name === 'water',
+							// isWater: child.name === 'water',
+							isWater: false,
 						})
 					}
 
@@ -105,7 +106,7 @@
 					let geo = new THREE.PlaneBufferGeometry(1, 1)
 					window.material1 = new THREE.MeshBasicMaterial()
 					let mesh = new THREE.Mesh(geo, material1)
-					scene2.add(mesh)
+					// scene2.add(mesh)
 					mesh.position.x = -.5
 					mesh.position.y = .5
 				}
@@ -121,7 +122,7 @@
 					let geo = new THREE.PlaneBufferGeometry(1, 1)
 					window.materialNormal = new THREE.MeshBasicMaterial()
 					let mesh = new THREE.Mesh(geo, materialNormal)
-					scene2.add(mesh)
+					// scene2.add(mesh)
 					mesh.position.x = .5
 					mesh.position.y = .5
 				}
@@ -129,13 +130,13 @@
 					let geo = new THREE.PlaneBufferGeometry(1, 1)
 					window.materialPosition = new THREE.MeshBasicMaterial()
 					let mesh = new THREE.Mesh(geo, materialPosition)
-					scene2.add(mesh)
+					// scene2.add(mesh)
 					mesh.position.x = -.5
 					mesh.position.y = -.5
 				}
 				{
-					let geo = new THREE.PlaneBufferGeometry(1, 1)
-					// let geo = new THREE.PlaneBufferGeometry(2, 2)
+					// let geo = new THREE.PlaneBufferGeometry(1, 1)
+					let geo = new THREE.PlaneBufferGeometry(2, 2)
 					window.uniformsSSR = {
 						projectionMatrix: { value: new THREE.Matrix4() },
 						modelViewMatrix: { value: new THREE.Matrix4() },
@@ -166,8 +167,8 @@
 					let mesh = new THREE.Mesh(geo, materialSSR)
 					window.meshSSR = mesh
 					scene2.add(mesh)
-					mesh.position.x = .5
-					mesh.position.y = -.5
+					// mesh.position.x = .5
+					// mesh.position.y = -.5
 					// mesh.position.z = .1
 				}
 			}
