--- a/examples/webgl_gpgpu_birds_test.html
+++ b/examples/webgl_gpgpu_birds_test.html
@@ -31,7 +31,6 @@
 		<!-- shader for bird's position -->
 		<script id="fragmentShaderPosition" type="x-shader/x-fragment">
 
-			uniform float time;
 			uniform float delta;
 
 			void main()	{
@@ -56,7 +55,6 @@
 		<!-- shader for bird's velocity -->
 		<script id="fragmentShaderVelocity" type="x-shader/x-fragment">
 
-			uniform float time;
 			uniform float testing;
 			uniform float delta; // about 0.016
 			uniform float separationDistance; // 20
@@ -134,10 +132,6 @@
 				}
 
 
-				// if (testing == 0.0) {}
-				// if ( rand( uv + time ) < freedomFactor ) {}
-
-
 				// Attract flocks to the center
 				vec3 central = vec3( 0., 0., 0. );
 				dir = selfPosition - central;
@@ -184,7 +178,9 @@
 
 							// Attraction / Cohesion - move closer
 							float threshDelta = 1.0 - alignmentThresh;
-							float adjustedPercent = ( percent - alignmentThresh ) / threshDelta;
+							float adjustedPercent;
+							if( threshDelta == 0. ) adjustedPercent = 1.;
+							else adjustedPercent = ( percent - alignmentThresh ) / threshDelta;
 
 							f = ( 0.5 - ( cos( adjustedPercent * PI_2 ) * -0.5 + 0.5 ) ) * delta;
 
@@ -224,8 +220,6 @@
 
 			varying vec4 vColor;
 			varying float z;
-
-			uniform float time;
 
 			void main() {
 
@@ -502,9 +496,7 @@
 				positionUniforms = positionVariable.material.uniforms;
 				velocityUniforms = velocityVariable.material.uniforms;
 
-				positionUniforms[ "time" ] = { value: 0.0 };
 				positionUniforms[ "delta" ] = { value: 0.0 };
-				velocityUniforms[ "time" ] = { value: 1.0 };
 				velocityUniforms[ "delta" ] = { value: 0.0 };
 				velocityUniforms[ "testing" ] = { value: 1.0 };
 				velocityUniforms[ "separationDistance" ] = { value: 1.0 };
@@ -544,7 +536,6 @@
 					"color": { value: new THREE.Color( 0xff2200 ) },
 					"texturePosition": { value: null },
 					"textureVelocity": { value: null },
-					"time": { value: 1.0 },
 					"delta": { value: 0.0 }
 				};
 
@@ -644,11 +635,8 @@
 				if ( delta > 1 ) delta = 1; // safety cap on large deltas
 				last = now;
 
-				positionUniforms[ "time" ].value = now;
 				positionUniforms[ "delta" ].value = delta;
-				velocityUniforms[ "time" ].value = now;
 				velocityUniforms[ "delta" ].value = delta;
-				birdUniforms[ "time" ].value = now;
 				birdUniforms[ "delta" ].value = delta;
 
 				velocityUniforms[ "predator" ].value.set( 0.5 * mouseX / windowHalfX, - 0.5 * mouseY / windowHalfY, 0 );
