--- a/examples/webgl_gpgpu_birds_test.html
+++ b/examples/webgl_gpgpu_birds_test.html
@@ -229,10 +229,10 @@
 
 				vec3 newPosition = position;
 
-				if ( birdVertex == 4.0 || birdVertex == 7.0 ) {
-					// flap wings
-					newPosition.y = sin( tmpPos.w ) * 5.;
-				}
+				//if ( birdVertex == 4.0 || birdVertex == 7.0 ) {
+				//	// flap wings
+				//	newPosition.y = sin( tmpPos.w ) * 5.;
+				//}
 
 				newPosition = mat3( modelMatrix ) * newPosition;
 
