--- a/examples/webgl_gpgpu_birds_test.html
+++ b/examples/webgl_gpgpu_birds_test.html
@@ -40,13 +40,7 @@
 				vec3 position = tmpPos.xyz;
 				vec3 velocity = texture2D( textureVelocity, uv ).xyz;
 
-				float phase = tmpPos.w;
-
-				phase = mod( ( phase + delta +
-					length( velocity.xz ) * delta * 3. +
-					max( velocity.y, 0.0 ) * delta * 6. ), 62.83 );
-
-				gl_FragColor = vec4( position + velocity * delta * 15. , phase );
+				gl_FragColor = vec4( position + velocity * delta * 15. , 1 );
 
 			}
 
@@ -55,7 +49,6 @@
 		<!-- shader for bird's velocity -->
 		<script id="fragmentShaderVelocity" type="x-shader/x-fragment">
 
-			uniform float testing;
 			uniform float delta; // about 0.016
 			uniform float separationDistance; // 20
 			uniform float alignmentDistance; // 40
@@ -211,7 +204,6 @@
 		<script type="x-shader/x-vertex" id="birdVS">
 
 			attribute vec2 reference;
-			attribute float birdVertex;
 
 			attribute vec3 birdColor;
 
@@ -228,11 +220,6 @@
 				vec3 velocity = normalize(texture2D( textureVelocity, reference ).xyz);
 
 				vec3 newPosition = position;
-
-				//if ( birdVertex == 4.0 || birdVertex == 7.0 ) {
-				//	// flap wings
-				//	newPosition.y = sin( tmpPos.w ) * 5.;
-				//}
 
 				newPosition = mat3( modelMatrix ) * newPosition;
 
@@ -261,10 +248,10 @@
 					0     , 0    , 1
 				);
 
-				newPosition =  maty * matz * newPosition;
+				//newPosition =  maty * matz * newPosition;
 				newPosition += pos;
 
-				z = newPosition.z;
+				//z = newPosition.z;
 
 				vColor = vec4( birdColor, 1.0 );
 				gl_Position = projectionMatrix *  viewMatrix  * vec4( newPosition, 1.0 );
@@ -282,8 +269,8 @@
 
 			void main() {
 				// Fake colors for now
-				float z2 = 0.2 + ( 1000. - z ) / 1000. * vColor.x;
-				gl_FragColor = vec4( z2, z2, z2, 1. );
+				//float z2 = 0.2 + ( 1000. - z ) / 1000. * vColor.x;
+				//gl_FragColor = vec4( z2, z2, z2, 1. );
 				gl_FragColor = vColor;
 
 			}
@@ -307,7 +294,7 @@
 			// Custom Geometry - using 3 triangles each. No UVs, no normals currently.
 			function BirdGeometry() {
 
-				const triangles = BIRDS * 3;
+				const triangles = BIRDS * 2;
 				const points = triangles * 3;
 
 				THREE.BufferGeometry.call( this );
@@ -315,12 +302,10 @@
 				const vertices = new THREE.BufferAttribute( new Float32Array( points * 3 ), 3 );
 				const birdColors = new THREE.BufferAttribute( new Float32Array( points * 3 ), 3 );
 				const references = new THREE.BufferAttribute( new Float32Array( points * 2 ), 2 );
-				const birdVertex = new THREE.BufferAttribute( new Float32Array( points ), 1 );
 
 				this.setAttribute( 'position', vertices );
 				this.setAttribute( 'birdColor', birdColors );
 				this.setAttribute( 'reference', references );
-				this.setAttribute( 'birdVertex', birdVertex );
 
 				// this.setAttribute( 'normal', new Float32Array( points * 3 ), 3 );
 
@@ -341,12 +326,12 @@
 
 				for ( let f = 0; f < BIRDS; f ++ ) {
 
-					// Body
-					verts_push(
-						0, - 0, - 200,
-						0, 40, - 200,
-						0, 0, 300
-					);
+					// // Body
+					// verts_push(
+					// 	0, - 0, - 200,
+					// 	0, 40, - 200,
+					// 	0, 0, 300
+					// );
 
 					// Left Wing
 					verts_push(
@@ -372,7 +357,7 @@
 					const x = ( i % WIDTH ) / WIDTH;
 					const y = ~ ~ ( i / WIDTH ) / WIDTH;
 
-					switch(i%3){
+					switch(i%2){
 						case 0:
 							c.setRGB(1,0,0)
 							break
@@ -394,8 +379,6 @@
 
 					references.array[ v * 2 ] = x;
 					references.array[ v * 2 + 1 ] = y;
-
-					birdVertex.array[ v ] = v % 9;
 
 				}
 
@@ -512,7 +495,6 @@
 
 				positionUniforms[ "delta" ] = { value: 0.0 };
 				velocityUniforms[ "delta" ] = { value: 0.0 };
-				velocityUniforms[ "testing" ] = { value: 1.0 };
 				velocityUniforms[ "separationDistance" ] = { value: 1.0 };
 				velocityUniforms[ "alignmentDistance" ] = { value: 1.0 };
 				velocityUniforms[ "cohesionDistance" ] = { value: 1.0 };
