--- a/examples/webgl_gpgpu_birds_test.html
+++ b/examples/webgl_gpgpu_birds_test.html
@@ -268,6 +268,7 @@
 
 				vColor = vec4( birdColor, 1.0 );
 				gl_Position = projectionMatrix *  viewMatrix  * vec4( newPosition, 1.0 );
+				//gl_Position = projectionMatrix *  modelViewMatrix * vec4(position,1);
 			}
 
 		</script>
@@ -296,6 +297,7 @@
 
 			import Stats from './jsm/libs/stats.module.js';
 			import { GUI } from './jsm/libs/dat.gui.module.js';
+			import { OrbitControls } from './jsm/controls/OrbitControls.js';
 
 			import { GPUComputationRenderer } from './jsm/misc/GPUComputationRenderer.js';
 
@@ -454,6 +456,7 @@
 
 				//
 
+				const controls = new OrbitControls( camera, renderer.domElement );
 				window.addEventListener( 'resize', onWindowResize, false );
 
 				const gui = new GUI();
