--- a/examples/webgl_gpgpu_birds_test.html
+++ b/examples/webgl_gpgpu_birds_test.html
@@ -267,8 +267,8 @@
 				z = newPosition.z;
 
 				vColor = vec4( birdColor, 1.0 );
-				gl_Position = projectionMatrix *  viewMatrix  * vec4( newPosition, 1.0 );
-				//gl_Position = projectionMatrix *  modelViewMatrix * vec4(position,1);
+				//gl_Position = projectionMatrix *  viewMatrix  * vec4( newPosition, 1.0 );
+				gl_Position = projectionMatrix *  modelViewMatrix * vec4(position+pos,1);
 			}
 
 		</script>
