--- a/examples/webgl_gpgpu_birds_test.html
+++ b/examples/webgl_gpgpu_birds_test.html
@@ -39,14 +39,7 @@
 				vec4 tmpPos = texture2D( texturePosition, uv );
 				vec3 position = tmpPos.xyz;
 				vec3 velocity = texture2D( textureVelocity, uv ).xyz;
-
-				float phase = tmpPos.w;
-
-				phase = mod( ( phase + delta +
-					length( velocity.xz ) * delta * 3. +
-					max( velocity.y, 0.0 ) * delta * 6. ), 62.83 );
-
-				gl_FragColor = vec4( position + velocity * delta * 15. , phase );
+				gl_FragColor = vec4( position + velocity * delta * 15. , 1 );
 
 			}
 
@@ -211,7 +204,6 @@
 		<script type="x-shader/x-vertex" id="birdVS">
 
 			attribute vec2 reference;
-			attribute float birdVertex;
 
 			attribute vec3 birdColor;
 
@@ -225,49 +217,8 @@
 
 				vec4 tmpPos = texture2D( texturePosition, reference );
 				vec3 pos = tmpPos.xyz;
-				vec3 velocity = normalize(texture2D( textureVelocity, reference ).xyz);
-
-				vec3 newPosition = position;
-
-				//if ( birdVertex == 4.0 || birdVertex == 7.0 ) {
-				//	// flap wings
-				//	newPosition.y = sin( tmpPos.w ) * 5.;
-				//}
-
-				newPosition = mat3( modelMatrix ) * newPosition;
-
-
-				velocity.z *= -1.;
-				float xz = length( velocity.xz );
-				float xyz = 1.;
-				float x = sqrt( 1. - velocity.y * velocity.y );
-
-				float cosry = velocity.x / xz;
-				float sinry = velocity.z / xz;
-
-				float cosrz = x / xyz;
-				float sinrz = velocity.y / xyz;
-
-				mat3 maty =  mat3(
-					cosry, 0, -sinry,
-					0    , 1, 0     ,
-					sinry, 0, cosry
-
-				);
-
-				mat3 matz =  mat3(
-					cosrz , sinrz, 0,
-					-sinrz, cosrz, 0,
-					0     , 0    , 1
-				);
-
-				newPosition =  maty * matz * newPosition;
-				newPosition += pos;
-
-				z = newPosition.z;
 
 				vColor = vec4( birdColor, 1.0 );
-				//gl_Position = projectionMatrix *  viewMatrix  * vec4( newPosition, 1.0 );
 				gl_Position = projectionMatrix *  modelViewMatrix * vec4(position+pos,1);
 			}
 
@@ -277,14 +228,10 @@
 		<script type="x-shader/x-fragment" id="birdFS">
 
 			varying vec4 vColor;
-			varying float z;
 
 			uniform vec3 color;
 
 			void main() {
-				// Fake colors for now
-				float z2 = 0.2 + ( 1000. - z ) / 1000. * vColor.x;
-				gl_FragColor = vec4( z2, z2, z2, 1. );
 				gl_FragColor = vColor;
 
 			}
@@ -317,12 +264,10 @@
 				const vertices = new THREE.BufferAttribute( new Float32Array( points * 3 ), 3 );
 				const birdColors = new THREE.BufferAttribute( new Float32Array( points * 3 ), 3 );
 				const references = new THREE.BufferAttribute( new Float32Array( points * 2 ), 2 );
-				const birdVertex = new THREE.BufferAttribute( new Float32Array( points ), 1 );
 
 				this.setAttribute( 'position', vertices );
 				this.setAttribute( 'birdColor', birdColors );
 				this.setAttribute( 'reference', references );
-				this.setAttribute( 'birdVertex', birdVertex );
 
 				// this.setAttribute( 'normal', new Float32Array( points * 3 ), 3 );
 
@@ -397,8 +342,6 @@
 					references.array[ v * 2 ] = x;
 					references.array[ v * 2 + 1 ] = y;
 
-					birdVertex.array[ v ] = v % 9;
-
 				}
 
 				this.scale( 0.2, 0.2, 0.2 );
@@ -435,7 +378,7 @@
 				document.body.appendChild( container );
 
 				camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 3000 );
-				camera.position.z = 350;
+				camera.position.z = 850;
 
 				scene = new THREE.Scene();
 				scene.background = new THREE.Color( 0xffffff );
