--- a/examples/webgl_gpgpu_birds_test.html
+++ b/examples/webgl_gpgpu_birds_test.html
@@ -46,6 +46,7 @@
 
 			attribute vec2 reference;
 
+			attribute float index;
 			attribute vec3 birdColor;
 
 			uniform sampler2D texturePosition;
@@ -58,6 +59,7 @@
 				vec3 pos = tmpPos.xyz;
 
 				vColor = vec4( birdColor, 1.0 );
+				//vColor = vec4( index/12.,0,0, 1.0 );
 				gl_Position = projectionMatrix *  modelViewMatrix * vec4(position+pos,1);
 				//gl_Position = projectionMatrix *  modelViewMatrix * vec4(position+pos+vec3(reference*50.,0),1);
 			}
@@ -86,6 +88,13 @@
 
 			const tri_per_bird=3
 
+			let vs={}
+			vs.serial_to_xy=function (width, index){ // :{x:x, y:y}
+				var x=index%width
+				var y=Math.floor(index/width)
+				return {x:x, y:y}
+			}
+
 			/* TEXTURE WIDTH FOR SIMULATION */
 			const WIDTH = 2;
 
@@ -100,10 +109,12 @@
 				THREE.BufferGeometry.call( this );
 
 				const vertices = new THREE.BufferAttribute( new Float32Array( points * 3 ), 3 );
+				const indexs = new THREE.BufferAttribute( new Float32Array( points * 3 ), 3 );
 				const birdColors = new THREE.BufferAttribute( new Float32Array( points * 3 ), 3 );
 				const references = new THREE.BufferAttribute( new Float32Array( points * 2 ), 2 );
 
 				this.setAttribute( 'position', vertices );
+				this.setAttribute( 'index', indexs );
 				this.setAttribute( 'birdColor', birdColors );
 				this.setAttribute( 'reference', references );
 
@@ -139,7 +150,7 @@
 						// Body
 						verts_push(
 							0, - 0, - 200,
-							0, 40, - 200,
+							0, 200, - 200,
 							0, 0, 300
 						);
 					}
@@ -150,9 +161,13 @@
 				for ( let v = 0; v < triangles * 3; v ++ ) {
 
 					const i = ~ ~ ( v / 3 );
-					// console.log(i)
 					const x = ( i % WIDTH ) / WIDTH;
 					const y = ~ ~ ( i / WIDTH ) / WIDTH;
+
+					// const i = Math.trunc( v / 3 );
+					// const {x,y}=vs.serial_to_xy(WIDTH,i)
+
+					console.log(i)
 
 					switch(i%tri_per_bird){
 						case 0:
@@ -169,6 +184,8 @@
 							break
 
 					}
+
+					indexs.array[v]=i
 
 					birdColors.array[ v * 3 + 0 ] = c.r;
 					birdColors.array[ v * 3 + 1 ] = c.g;
